# bazel_libgit2_test

./: BUILD.bazel  WORKSPACE  git2go.BUILD  go.mod  go.sum  libgit2.BUILD  main.go
