load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/whs-dot-hk/bazel_libgit2_test
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/whs-dot-hk/bazel_libgit2_test",
    visibility = ["//visibility:private"],
    deps = ["@com_github_libgit2_git2go_v30//:go_default_library"],
)

go_binary(
    name = "bazel_libgit2_test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
